fix text wrap

--- a/src/core/molecules/color-selection/color-selection.scss
+++ b/src/core/molecules/color-selection/color-selection.scss
@@ -62,6 +62,7 @@
 
   &__group-label {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     margin-bottom: 10px;
     text-transform: uppercase;
